vim-engine/src/main/kotlin/com/maddyhome/idea/vim/regexp/parser/generated/RegexParser.java
// Generated from RegexParser.g4 by ANTLR 4.10.1
package com.maddyhome.idea.vim.regexp.parser.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RegexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ALTERNATION_MAGIC=1, AND_MAGIC=2, LEFT_PAREN_MAGIC=3, RIGHT_PAREN_MAGIC=4, 
		LITERAL_CHAR_MAGIC=5, DOT_MAGIC=6, STAR_MAGIC=7, PLUS_MAGIC=8, OPTIONAL_MAGIC=9, 
		RANGE_START_MAGIC=10, COLLECTION_START_MAGIC=11, CLASS_IDENTIFIER_MAGIC=12, 
		CLASS_IDENTIFIER_D_MAGIC=13, CLASS_KEYWORD_MAGIC=14, CLASS_KEYWORD_D_MAGIC=15, 
		CLASS_FILENAME_MAGIC=16, CLASS_FILENAME_D_MAGIC=17, CLASS_PRINTABLE_MAGIC=18, 
		CLASS_PRINTABLE_D_MAGIC=19, CLASS_WS_MAGIC=20, CLASS_NOT_WS_MAGIC=21, 
		CLASS_DIGIT_MAGIC=22, CLASS_NOT_DIGIT_MAGIC=23, CLASS_HEX_MAGIC=24, CLASS_NOT_HEX_MAGIC=25, 
		CLASS_OCTAL_MAGIC=26, CLASS_NOT_OCTAL_MAGIC=27, CLASS_WORD_MAGIC=28, CLASS_NOT_WORD_MAGIC=29, 
		CLASS_HEADWORD_MAGIC=30, CLASS_NOT_HEADWORD_MAGIC=31, CLASS_ALPHA_MAGIC=32, 
		CLASS_NOT_ALPHA_MAGIC=33, CLASS_LCASE_MAGIC=34, CLASS_NOT_LCASE_MAGIC=35, 
		CLASS_UCASE_MAGIC=36, CLASS_NOT_UCASE_MAGIC=37, CLASS_ESC_MAGIC=38, CLASS_TAB_MAGIC=39, 
		CLASS_CR_MAGIC=40, CLASS_BS_MAGIC=41, CLASS_NL_MAGIC=42, SETMAGIC_MAGIC=43, 
		SETNOMAGIC_MAGIC=44, SETVMAGIC_MAGIC=45, SETVNOMAGIC_MAGIC=46, ALTERNATION_NOMAGIC=47, 
		AND_NOMAGIC=48, LEFT_PAREN_NOMAGIC=49, RIGHT_PAREN_NOMAGIC=50, LITERAL_CHAR_NOMAGIC=51, 
		DOT_NOMAGIC=52, STAR_NOMAGIC=53, PLUS_NOMAGIC=54, OPTIONAL_NOMAGIC=55, 
		RANGE_START_NOMAGIC=56, COLLECTION_START_NOMAGIC=57, CLASS_IDENTIFIER_NOMAGIC=58, 
		CLASS_IDENTIFIER_D_NOMAGIC=59, CLASS_KEYWORD_NOMAGIC=60, CLASS_KEYWORD_D_NOMAGIC=61, 
		CLASS_FILENAME_NOMAGIC=62, CLASS_FILENAME_D_NOMAGIC=63, CLASS_PRINTABLE_NOMAGIC=64, 
		CLASS_PRINTABLE_D_NOMAGIC=65, CLASS_WS_NOMAGIC=66, CLASS_NOT_WS_NOMAGIC=67, 
		CLASS_DIGIT_NOMAGIC=68, CLASS_NOT_DIGIT_NOMAGIC=69, CLASS_HEX_NOMAGIC=70, 
		CLASS_NOT_HEX_NOMAGIC=71, CLASS_OCTAL_NOMAGIC=72, CLASS_NOT_OCTAL_NOMAGIC=73, 
		CLASS_WORD_NOMAGIC=74, CLASS_NOT_WORD_NOMAGIC=75, CLASS_HEADWORD_NOMAGIC=76, 
		CLASS_NOT_HEADWORD_NOMAGIC=77, CLASS_ALPHA_NOMAGIC=78, CLASS_NOT_ALPHA_NOMAGIC=79, 
		CLASS_LCASE_NOMAGIC=80, CLASS_NOT_LCASE_NOMAGIC=81, CLASS_UCASE_NOMAGIC=82, 
		CLASS_NOT_UCASE_NOMAGIC=83, CLASS_ESC_NOMAGIC=84, CLASS_TAB_NOMAGIC=85, 
		CLASS_CR_NOMAGIC=86, CLASS_BS_NOMAGIC=87, CLASS_NL_NOMAGIC=88, SETMAGIC_NOMAGIC=89, 
		SETNOMAGIC_NOMAGIC=90, SETVMAGIC_NOMAGIC=91, SETVNOMAGIC_NOMAGIC=92, RANGE_END=93, 
		INT=94, COMMA=95, COLLECTION_END=96, CARET=97, DASH=98, LITERAL_DASH=99, 
		COLLECTION_CHAR=100;
	public static final int
		RULE_pattern = 0, RULE_branch = 1, RULE_concat = 2, RULE_piece = 3, RULE_atom = 4, 
		RULE_multi = 5, RULE_ordinary_atom = 6, RULE_range = 7, RULE_char_class = 8, 
		RULE_collection = 9, RULE_collection_elem = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"pattern", "branch", "concat", "piece", "atom", "multi", "ordinary_atom", 
			"range", "char_class", "collection", "collection_elem"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'.'", "'*'", null, null, null, "'['", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'\\.'", "'\\*'", null, null, null, "'\\['", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'}'", 
			null, "','", "']'", "'^'", "'-'", "'\\-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ALTERNATION_MAGIC", "AND_MAGIC", "LEFT_PAREN_MAGIC", "RIGHT_PAREN_MAGIC", 
			"LITERAL_CHAR_MAGIC", "DOT_MAGIC", "STAR_MAGIC", "PLUS_MAGIC", "OPTIONAL_MAGIC", 
			"RANGE_START_MAGIC", "COLLECTION_START_MAGIC", "CLASS_IDENTIFIER_MAGIC", 
			"CLASS_IDENTIFIER_D_MAGIC", "CLASS_KEYWORD_MAGIC", "CLASS_KEYWORD_D_MAGIC", 
			"CLASS_FILENAME_MAGIC", "CLASS_FILENAME_D_MAGIC", "CLASS_PRINTABLE_MAGIC", 
			"CLASS_PRINTABLE_D_MAGIC", "CLASS_WS_MAGIC", "CLASS_NOT_WS_MAGIC", "CLASS_DIGIT_MAGIC", 
			"CLASS_NOT_DIGIT_MAGIC", "CLASS_HEX_MAGIC", "CLASS_NOT_HEX_MAGIC", "CLASS_OCTAL_MAGIC", 
			"CLASS_NOT_OCTAL_MAGIC", "CLASS_WORD_MAGIC", "CLASS_NOT_WORD_MAGIC", 
			"CLASS_HEADWORD_MAGIC", "CLASS_NOT_HEADWORD_MAGIC", "CLASS_ALPHA_MAGIC", 
			"CLASS_NOT_ALPHA_MAGIC", "CLASS_LCASE_MAGIC", "CLASS_NOT_LCASE_MAGIC", 
			"CLASS_UCASE_MAGIC", "CLASS_NOT_UCASE_MAGIC", "CLASS_ESC_MAGIC", "CLASS_TAB_MAGIC", 
			"CLASS_CR_MAGIC", "CLASS_BS_MAGIC", "CLASS_NL_MAGIC", "SETMAGIC_MAGIC", 
			"SETNOMAGIC_MAGIC", "SETVMAGIC_MAGIC", "SETVNOMAGIC_MAGIC", "ALTERNATION_NOMAGIC", 
			"AND_NOMAGIC", "LEFT_PAREN_NOMAGIC", "RIGHT_PAREN_NOMAGIC", "LITERAL_CHAR_NOMAGIC", 
			"DOT_NOMAGIC", "STAR_NOMAGIC", "PLUS_NOMAGIC", "OPTIONAL_NOMAGIC", "RANGE_START_NOMAGIC", 
			"COLLECTION_START_NOMAGIC", "CLASS_IDENTIFIER_NOMAGIC", "CLASS_IDENTIFIER_D_NOMAGIC", 
			"CLASS_KEYWORD_NOMAGIC", "CLASS_KEYWORD_D_NOMAGIC", "CLASS_FILENAME_NOMAGIC", 
			"CLASS_FILENAME_D_NOMAGIC", "CLASS_PRINTABLE_NOMAGIC", "CLASS_PRINTABLE_D_NOMAGIC", 
			"CLASS_WS_NOMAGIC", "CLASS_NOT_WS_NOMAGIC", "CLASS_DIGIT_NOMAGIC", "CLASS_NOT_DIGIT_NOMAGIC", 
			"CLASS_HEX_NOMAGIC", "CLASS_NOT_HEX_NOMAGIC", "CLASS_OCTAL_NOMAGIC", 
			"CLASS_NOT_OCTAL_NOMAGIC", "CLASS_WORD_NOMAGIC", "CLASS_NOT_WORD_NOMAGIC", 
			"CLASS_HEADWORD_NOMAGIC", "CLASS_NOT_HEADWORD_NOMAGIC", "CLASS_ALPHA_NOMAGIC", 
			"CLASS_NOT_ALPHA_NOMAGIC", "CLASS_LCASE_NOMAGIC", "CLASS_NOT_LCASE_NOMAGIC", 
			"CLASS_UCASE_NOMAGIC", "CLASS_NOT_UCASE_NOMAGIC", "CLASS_ESC_NOMAGIC", 
			"CLASS_TAB_NOMAGIC", "CLASS_CR_NOMAGIC", "CLASS_BS_NOMAGIC", "CLASS_NL_NOMAGIC", 
			"SETMAGIC_NOMAGIC", "SETNOMAGIC_NOMAGIC", "SETVMAGIC_NOMAGIC", "SETVNOMAGIC_NOMAGIC", 
			"RANGE_END", "INT", "COMMA", "COLLECTION_END", "CARET", "DASH", "LITERAL_DASH", 
			"COLLECTION_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RegexParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RegexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PatternContext extends ParserRuleContext {
		public List<BranchContext> branch() {
			return getRuleContexts(BranchContext.class);
		}
		public BranchContext branch(int i) {
			return getRuleContext(BranchContext.class,i);
		}
		public List<TerminalNode> ALTERNATION_MAGIC() { return getTokens(RegexParser.ALTERNATION_MAGIC); }
		public TerminalNode ALTERNATION_MAGIC(int i) {
			return getToken(RegexParser.ALTERNATION_MAGIC, i);
		}
		public List<TerminalNode> ALTERNATION_NOMAGIC() { return getTokens(RegexParser.ALTERNATION_NOMAGIC); }
		public TerminalNode ALTERNATION_NOMAGIC(int i) {
			return getToken(RegexParser.ALTERNATION_NOMAGIC, i);
		}
		public PatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexParserListener ) ((RegexParserListener)listener).enterPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexParserListener ) ((RegexParserListener)listener).exitPattern(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegexParserVisitor ) return ((RegexParserVisitor<? extends T>)visitor).visitPattern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PatternContext pattern() throws RecognitionException {
		PatternContext _localctx = new PatternContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pattern);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(22);
					branch();
					setState(23);
					_la = _input.LA(1);
					if ( !(_la==ALTERNATION_MAGIC || _la==ALTERNATION_NOMAGIC) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(29);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(30);
			branch();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BranchContext extends ParserRuleContext {
		public List<ConcatContext> concat() {
			return getRuleContexts(ConcatContext.class);
		}
		public ConcatContext concat(int i) {
			return getRuleContext(ConcatContext.class,i);
		}
		public List<TerminalNode> AND_MAGIC() { return getTokens(RegexParser.AND_MAGIC); }
		public TerminalNode AND_MAGIC(int i) {
			return getToken(RegexParser.AND_MAGIC, i);
		}
		public List<TerminalNode> AND_NOMAGIC() { return getTokens(RegexParser.AND_NOMAGIC); }
		public TerminalNode AND_NOMAGIC(int i) {
			return getToken(RegexParser.AND_NOMAGIC, i);
		}
		public BranchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_branch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexParserListener ) ((RegexParserListener)listener).enterBranch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexParserListener ) ((RegexParserListener)listener).exitBranch(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegexParserVisitor ) return ((RegexParserVisitor<? extends T>)visitor).visitBranch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BranchContext branch() throws RecognitionException {
		BranchContext _localctx = new BranchContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_branch);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(32);
					concat();
					setState(33);
					_la = _input.LA(1);
					if ( !(_la==AND_MAGIC || _la==AND_NOMAGIC) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(40);
			concat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcatContext extends ParserRuleContext {
		public List<PieceContext> piece() {
			return getRuleContexts(PieceContext.class);
		}
		public PieceContext piece(int i) {
			return getRuleContext(PieceContext.class,i);
		}
		public ConcatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexParserListener ) ((RegexParserListener)listener).enterConcat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexParserListener ) ((RegexParserListener)listener).exitConcat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegexParserVisitor ) return ((RegexParserVisitor<? extends T>)visitor).visitConcat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConcatContext concat() throws RecognitionException {
		ConcatContext _localctx = new ConcatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_concat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(42);
				piece();
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LEFT_PAREN_MAGIC) | (1L << LITERAL_CHAR_MAGIC) | (1L << DOT_MAGIC) | (1L << COLLECTION_START_MAGIC) | (1L << CLASS_IDENTIFIER_MAGIC) | (1L << CLASS_IDENTIFIER_D_MAGIC) | (1L << CLASS_KEYWORD_MAGIC) | (1L << CLASS_KEYWORD_D_MAGIC) | (1L << CLASS_FILENAME_MAGIC) | (1L << CLASS_FILENAME_D_MAGIC) | (1L << CLASS_PRINTABLE_MAGIC) | (1L << CLASS_PRINTABLE_D_MAGIC) | (1L << CLASS_WS_MAGIC) | (1L << CLASS_NOT_WS_MAGIC) | (1L << CLASS_DIGIT_MAGIC) | (1L << CLASS_NOT_DIGIT_MAGIC) | (1L << CLASS_HEX_MAGIC) | (1L << CLASS_NOT_HEX_MAGIC) | (1L << CLASS_OCTAL_MAGIC) | (1L << CLASS_NOT_OCTAL_MAGIC) | (1L << CLASS_WORD_MAGIC) | (1L << CLASS_NOT_WORD_MAGIC) | (1L << CLASS_HEADWORD_MAGIC) | (1L << CLASS_NOT_HEADWORD_MAGIC) | (1L << CLASS_ALPHA_MAGIC) | (1L << CLASS_NOT_ALPHA_MAGIC) | (1L << CLASS_LCASE_MAGIC) | (1L << CLASS_NOT_LCASE_MAGIC) | (1L << CLASS_UCASE_MAGIC) | (1L << CLASS_NOT_UCASE_MAGIC) | (1L << CLASS_ESC_MAGIC) | (1L << CLASS_TAB_MAGIC) | (1L << CLASS_CR_MAGIC) | (1L << CLASS_BS_MAGIC) | (1L << CLASS_NL_MAGIC) | (1L << LEFT_PAREN_NOMAGIC) | (1L << LITERAL_CHAR_NOMAGIC) | (1L << DOT_NOMAGIC) | (1L << COLLECTION_START_NOMAGIC) | (1L << CLASS_IDENTIFIER_NOMAGIC) | (1L << CLASS_IDENTIFIER_D_NOMAGIC) | (1L << CLASS_KEYWORD_NOMAGIC) | (1L << CLASS_KEYWORD_D_NOMAGIC) | (1L << CLASS_FILENAME_NOMAGIC) | (1L << CLASS_FILENAME_D_NOMAGIC))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (CLASS_PRINTABLE_NOMAGIC - 64)) | (1L << (CLASS_PRINTABLE_D_NOMAGIC - 64)) | (1L << (CLASS_WS_NOMAGIC - 64)) | (1L << (CLASS_NOT_WS_NOMAGIC - 64)) | (1L << (CLASS_DIGIT_NOMAGIC - 64)) | (1L << (CLASS_NOT_DIGIT_NOMAGIC - 64)) | (1L << (CLASS_HEX_NOMAGIC - 64)) | (1L << (CLASS_NOT_HEX_NOMAGIC - 64)) | (1L << (CLASS_OCTAL_NOMAGIC - 64)) | (1L << (CLASS_NOT_OCTAL_NOMAGIC - 64)) | (1L << (CLASS_WORD_NOMAGIC - 64)) | (1L << (CLASS_NOT_WORD_NOMAGIC - 64)) | (1L << (CLASS_HEADWORD_NOMAGIC - 64)) | (1L << (CLASS_NOT_HEADWORD_NOMAGIC - 64)) | (1L << (CLASS_ALPHA_NOMAGIC - 64)) | (1L << (CLASS_NOT_ALPHA_NOMAGIC - 64)) | (1L << (CLASS_LCASE_NOMAGIC - 64)) | (1L << (CLASS_NOT_LCASE_NOMAGIC - 64)) | (1L << (CLASS_UCASE_NOMAGIC - 64)) | (1L << (CLASS_NOT_UCASE_NOMAGIC - 64)) | (1L << (CLASS_ESC_NOMAGIC - 64)) | (1L << (CLASS_TAB_NOMAGIC - 64)) | (1L << (CLASS_CR_NOMAGIC - 64)) | (1L << (CLASS_BS_NOMAGIC - 64)) | (1L << (CLASS_NL_NOMAGIC - 64)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PieceContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public MultiContext multi() {
			return getRuleContext(MultiContext.class,0);
		}
		public PieceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_piece; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexParserListener ) ((RegexParserListener)listener).enterPiece(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexParserListener ) ((RegexParserListener)listener).exitPiece(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegexParserVisitor ) return ((RegexParserVisitor<? extends T>)visitor).visitPiece(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PieceContext piece() throws RecognitionException {
		PieceContext _localctx = new PieceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_piece);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			atom();
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STAR_MAGIC) | (1L << PLUS_MAGIC) | (1L << OPTIONAL_MAGIC) | (1L << RANGE_START_MAGIC) | (1L << STAR_NOMAGIC) | (1L << PLUS_NOMAGIC) | (1L << OPTIONAL_NOMAGIC) | (1L << RANGE_START_NOMAGIC))) != 0)) {
				{
				setState(48);
				multi();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	 
		public AtomContext() { }
		public void copyFrom(AtomContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OrdinaryAtomContext extends AtomContext {
		public Ordinary_atomContext ordinary_atom() {
			return getRuleContext(Ordinary_atomContext.class,0);
		}
		public OrdinaryAtomContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexParserListener ) ((RegexParserListener)listener).enterOrdinaryAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexParserListener ) ((RegexParserListener)listener).exitOrdinaryAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegexParserVisitor ) return ((RegexParserVisitor<? extends T>)visitor).visitOrdinaryAtom(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GroupingContext extends AtomContext {
		public TerminalNode LEFT_PAREN_MAGIC() { return getToken(RegexParser.LEFT_PAREN_MAGIC, 0); }
		public TerminalNode LEFT_PAREN_NOMAGIC() { return getToken(RegexParser.LEFT_PAREN_NOMAGIC, 0); }
		public TerminalNode RIGHT_PAREN_MAGIC() { return getToken(RegexParser.RIGHT_PAREN_MAGIC, 0); }
		public TerminalNode RIGHT_PAREN_NOMAGIC() { return getToken(RegexParser.RIGHT_PAREN_NOMAGIC, 0); }
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public GroupingContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexParserListener ) ((RegexParserListener)listener).enterGrouping(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexParserListener ) ((RegexParserListener)listener).exitGrouping(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegexParserVisitor ) return ((RegexParserVisitor<? extends T>)visitor).visitGrouping(this);
			else return visitor.visitChildren(this);
		}
	}
